--- a/css/base.css
+++ b/css/base.css
@@ -31,12 +31,15 @@ html {
   height: 100dvh;
 }
 
+
 .main {
   display: flex;
   flex-wrap: wrap;
   max-width: 555px;
   gap: 20px;
-  margin: 15px auto 15px;
+  margin: 15px auto;
+  padding-bottom: 15px;
+
 }
 
 h1 {
@@ -60,7 +63,6 @@ h3 {
   background: var(--color-bg-container);
   border-radius: var(--radius-md);
   padding: var(--spacing-md);
-  transition: width 0.3s ease-in-out;
   
   &.small {
     width: var(--container-small);
@@ -82,6 +84,7 @@ h3 {
     max-width: 1110px; 
     gap: 40px; 
     margin: 30px auto; 
+    padding-bottom: 30px;
     margin-bottom: 30px;
   }
 
